# online_academy

./: Dockerfile  README.md  docker-compose.yml  payment_fixtures.json  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
course/: admin.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  views.py
lesson/: admin.py  models.py  paginators.py  serializers.py  tests.py  urls.py  views.py
payment/: models.py  services.py  tasks.py  tests.py  urls.py  views.py
users/: admin.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: create_moderator.py  create_superuser.py  generate_data.py
